--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,9 @@ body{
     color: var(--color-brown);
 }
 
-* button{
-    height: 72px;
-    width: 240px;
+.add-fav-btn{
+    height: 60px;
+    width: 180px;
     background-color: var(--color-peach);
     border: none;
     font-weight: bold;
@@ -45,8 +45,8 @@ body{
     height: 400px;
     width: 500px;
     object-fit: cover;
-    margin-top: 30px;
-    margin-bottom: 60px;
+    margin-top: 12px;
+    margin-bottom:12px;
 }
 
 .main-button{
@@ -63,4 +63,32 @@ body{
 .main-button:hover {
     cursor: pointer;
     color: var(--color-cream);
+}
+
+.random-dogs{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.dogs-random-container{
+    display: flex;
+}
+
+.dogs-random-container article{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 24px;
+}
+
+.fav_img{
+    width: 450px;
+    height:300px;
+    object-fit: cover;
+}
+
+.favorite-dogs{
+    display: flex;
+    flex-direction: column;
 }
